objects/Configuration_Step__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Script__c</fullName>
        <label>Apex Script</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Steps_Definition__c</fullName>
        <label>Configuration Steps Definition</label>
        <referenceTo>Configuration_Steps_Definition__c</referenceTo>
        <relationshipLabel>Configuration Steps</relationshipLabel>
        <relationshipName>Configuration_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dev1</fullName>
                </value>
                <value>
                    <fullName>Dev2</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Hotfix</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <label>Package Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Installation_Key__c</fullName>
        <description>An alphanumeric value to install a key-protected package. Leave this  blank for packages without keys.</description>
        <inlineHelpText>Installation key for key-protected packages. The field value is encoded on save.</inlineHelpText>
        <label>Installation Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Package Installation</fullName>
                </value>
                <value>
                    <fullName>Metadata Deploy</fullName>
                </value>
                <value>
                    <fullName>Data Deploy</fullName>
                </value>
                <value>
                    <fullName>Anonymous Apex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>